# devin_django_template

./: .envrc.example  Dockerfile  README.md  docker-compose.yml  make_envrc.sh  mise.toml  pyproject.toml  start.sh
config/: settings.py  urls.py
web/management/commands/: make_dummy_data.py  query_dummy_data.py
web/migrations/: 0001_initial.py
