[project]
name = "django_project"
version = "0.1.0"
description = "django project"
readme = "README.md"
requires-python = "<3.14, >=3.13"
dependencies = [
    "Django==6.0",
    "psycopg2==2.9.11",
]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
mypy_path = "."

[[tool.mypy.overrides]]
module = ["debug_toolbar.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.ruff.lint]
ignore = [
]

select = [
   "I",
]

[dependency-groups]
dev = [
    "ruff==0.14.10",
    "pytest==9.0.2",
    "django-debug-toolbar==6.1.0",
    "pytest-django==4.11.1",
    "factory-boy==3.3.3",
    "djlint==1.36.4",
    "django-stubs[compatible-mypy]==5.2.8",
    "djcheckup==0.6.0",
    "taskipy==1.14.1",
]

[tool.taskipy.tasks]
test = "uv run pytest"
lint = """
uv run ruff check .
uv run mypy .
uv run djlint templates/*/*.html --extension=html.j2 --check
uv run djlint templates/*/*.html --extension=html.j2 --lint
"""
fix = """
uv run ruff check . --fix
uv run ruff format .
uv run djlint templates/*/*.html --extension=html.j2 --reformat
"""
